<resources>
    <string name="app_name">Калькулятор</string>
    <string name="divide">/</string>
    <string name="multipli">*</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="button_point">.</string>
    <string name="delete">AC</string>
    <string name="equally">=</string>

    <string name="_9">9</string>
    <string name="_8">8</string>
    <string name="_7">7</string>
    <string name="_6">6</string>
    <string name="_5">5</string>
    <string name="_4">4</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="_0">0</string>

    <string name="hello_text">Привет,Мир</string>
    <string name="button_click">Список заказов</string>
    <string name="button_click_network_request">Курс валют</string>
    <string name="edit">Введите текст</string>
    <string name="check">Флажок</string>
    <string name="radioButtonNightStyle">ночь</string>
    <string name="radioButtonLightStyle">день</string>
    <string name="toggleButtonOff">Выключено</string>
    <string name="toggleButtonOn">Включено</string>

    <string name="blank_fragment">Following fragment</string>
    <string name="blank2_fragment">Back in container</string>
</resources>