<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/button_settings"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="10dp"
        android:backgroundTint="@color/brown"
        android:src="@drawable/ic_go_to_settings"/>

    <TextView
        android:id="@+id/input_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:gravity="start"
        android:textSize="30sp"
        android:layout_margin="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/view_1"/>
    <View
        android:id="@+id/view_1"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginHorizontal="10dp"
        app:layout_constraintBottom_toTopOf="@id/divide"
        android:background="@color/brown"/>

    <Button
        android:id="@+id/divide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/divide"
        style="@style/Button_Style_Black"
        app:layout_constraintBottom_toTopOf="@id/multiple"
        app:layout_constraintStart_toStartOf="@id/multiple"/>

    <Button
        android:id="@+id/multiple"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/multipli"
        style="@style/Button_Style_Black"
        app:layout_constraintBottom_toTopOf="@id/plus"
        app:layout_constraintStart_toEndOf="@id/button_9"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/button_9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_9"
        style="@style/Button_Style_Black"
        app:layout_constraintStart_toEndOf="@id/button_8"
        app:layout_constraintBottom_toTopOf="@id/button_6"
        app:layout_constraintEnd_toStartOf="@id/multiple"/>

    <Button
        android:id="@+id/button_8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_8"
        style="@style/Button_Style_Black"
        app:layout_constraintBottom_toTopOf="@id/button_5"
        app:layout_constraintEnd_toStartOf="@id/button_9"
        app:layout_constraintStart_toEndOf="@id/button_7"/>
    <Button
        android:id="@+id/button_7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_7"
        style="@style/Button_Style_Black"
        app:layout_constraintBottom_toTopOf="@id/button_4"
        app:layout_constraintEnd_toStartOf="@id/button_8"
        app:layout_constraintStart_toStartOf="parent"/>


    <Button
        android:id="@+id/plus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/plus"
        style="@style/Button_Style_Black"
        app:layout_constraintBottom_toTopOf="@id/minus"
        app:layout_constraintStart_toEndOf="@id/button_6"
        app:layout_constraintEnd_toEndOf="parent"/>


    <Button
        android:id="@+id/button_6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_6"
        style="@style/Button_Style_Black"
        app:layout_constraintBottom_toTopOf="@id/button_3"
        app:layout_constraintEnd_toStartOf="@id/plus"
        app:layout_constraintStart_toEndOf="@id/button_5"/>


    <Button
        android:id="@+id/button_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_5"
        style="@style/Button_Style_Black"
        app:layout_constraintBottom_toTopOf="@id/button_2"
        app:layout_constraintEnd_toStartOf="@id/button_6"
        app:layout_constraintStart_toEndOf="@id/button_4"/>

    <Button
        android:id="@+id/button_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_4"
        style="@style/Button_Style_Black"
        app:layout_constraintBottom_toTopOf="@id/button_1"
        app:layout_constraintEnd_toStartOf="@id/button_5"
        app:layout_constraintStart_toStartOf="parent"/>


    <Button
        android:id="@+id/minus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/minus"
        style="@style/Button_Style_Black"
        app:layout_constraintBottom_toTopOf="@id/equally"
        app:layout_constraintStart_toEndOf="@id/button_3"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/button_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_3"
        style="@style/Button_Style_Black"
        app:layout_constraintBottom_toTopOf="@id/button_point"
        app:layout_constraintEnd_toStartOf="@id/minus"
        app:layout_constraintStart_toEndOf="@id/button_2"/>

    <Button
        android:id="@+id/button_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_2"
        style="@style/Button_Style_Black"
        app:layout_constraintBottom_toTopOf="@id/button_0"
        app:layout_constraintEnd_toStartOf="@id/button_3"
        app:layout_constraintStart_toEndOf="@id/button_1"/>

    <Button
        android:id="@+id/button_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_1"
        style="@style/Button_Style_Black"
        app:layout_constraintBottom_toTopOf="@id/delete"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button_2"/>

    <Button
        android:id="@+id/equally"
        style="@style/Button_Style_Black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:text="@string/equally"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/button_point" />

    <Button
        android:id="@+id/button_point"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_point"
        style="@style/Button_Style_Black"
        android:layout_marginBottom="15dp"
        app:layout_constraintEnd_toStartOf="@id/equally"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/button_0"/>

    <Button
        android:id="@+id/button_0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0"
        style="@style/Button_Style_Black"
        android:layout_marginBottom="15dp"
        app:layout_constraintEnd_toStartOf="@id/button_point"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/delete"/>

    <Button
        android:id="@+id/delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        style="@style/Button_Style_Black"
        android:layout_marginBottom="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button_0"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>